# finale

./: README.md
robot_sim/: CMakeLists.txt  package.xml
robot_sim/launch/: multi_robot.launch.py
robot_sim/models/aruco_tags/: model.config  model.sdf
robot_sim/src/: pub_ctrl.cpp
robot_sim/worlds/: my_custom_world.sdf
ros2_fra2mo/config/: navigation.yaml  slam.yaml
ros2_fra2mo/launch/: gazebo_fra2mo.launch.py
ros2_fra2mo/maps/: map.pgm  map.yaml
ros2_fra2mo/urdf/: fra2mo_base_macro.xacro
ros2_fra2mo/worlds/: my_custom_world.sdf
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml  initial_positions.yaml
ros2_iiwa/iiwa_description/gazebo/: iiwa.gazebo.xacro
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro
ros2_kdl_package/: CMakeLists.txt  package.xml
ros2_kdl_package/action/: ExecuteTrajectory.action
ros2_kdl_package/config/: kdl_params.yaml
ros2_kdl_package/include/: kdl_control.h
ros2_kdl_package/launch/: launching.launch.py
ros2_kdl_package/src/: kdl_control.cpp  kdl_robot.cpp  ros2_kdl_node.cpp  ros2_kdl_node_client.cpp
